# AoC

./: .gitignore  deps.edn
2021/: README.org
2021/src/: day11.clj  day12.clj  day16.clj  day17.clj  day2.clj  day21.clj  day3.clj  day4.clj  day7.clj  day8.clj  day9.clj
2022/: AoC2022.cabal  LICENSE
2022/src/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Zipper.hs  ZipperTree.hs  map  x
src/: day1.clj  day10.clj  day12.clj  day13.clj  day14.clj  day15.clj  day16.clj  day20.clj  day21.clj  day22.clj  day24.clj  day3.clj  day5.clj  day6.clj  day7.clj  day8.clj
